# GIRCSE

./: .gitignore  LICENSE  README.md  accelerate_config.yaml  lora.json  pyproject.toml
embedding/: arguments.py  base.py  data.py  instructions.py  main.py  model.py  mteb_eval.py  trainer.py
scripts/: eval_mteb.sh  train.sh
