[project]
name = "gircse"
version = "0.1.0"
description = ""
authors = [
    {name = "roytsai27",email = "roytsai27@gmail.com"}
]
readme = "README.md"

[tool.poetry]
packages = [{include = "embedding"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
torch = "2.8.0"
transformers = "^4.56.0"
matplotlib = "^3.10.6"
ipywidgets = "^8.1.7"
tqdm = "^4.67.1"
seaborn = "^0.13.2"
pandas = "^2.3.2"
scikit-learn = "^1.7.1"
ipykernel = "^6.30.1"
mteb = "1.36.15"
accelerate = "^1.10.1"
bitsandbytes = "^0.47.0"
pre-commit = "^4.3.0"
deepspeed = "^0.17.5"
peft = "^0.17.1"
wandb = "^0.21.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
